--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ table tr td:last-child {
     flex-direction: column;
     margin: 50px;
 }
-.replay-btn,
+.reset-btn,
 .hu-score-wrap,
 .ai-score-wrap,
 .endgame {
@@ -63,7 +63,7 @@ table tr td:last-child {
     margin: .3rem;
     box-shadow: 0 2px 0 0 rgb(165, 156, 161);
 }
-.replay-btn:hover{
+.reset-btn:hover{
     background: rgb(90, 131, 167);
     opacity: .8;
     color: white;
@@ -78,7 +78,7 @@ table tr td:last-child {
     background: whitesmoke;
     color: #D7263D;
 }
-.replay-btn h1{
+.reset-btn h1{
     font-size: 1.5rem;
 }
 .info-wrapper{
@@ -114,14 +114,14 @@ table tr td:last-child {
         height : 5rem;
         width : 5rem;
     }
-    .replay-btn,
+    .reset-btn,
     .hu-score-wrap,
     .ai-score-wrap,
     .endgame{
         font-size: .5rem;
         padding: .2rem 5rem;
     }
-    .replay-btn h1 {
+    .reset-btn h1 {
         font-size: 1.0rem;
     }
 }
